--- a/template/home.html
+++ b/template/home.html
@@ -5,7 +5,7 @@
 <title>Cupumanik</title>
 <link href='https://fonts.googleapis.com/css?family=Raleway'
 	rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="../css/style.css">
 <link rel="stylesheet" href="cupumanik-style.css">
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
@@ -20,7 +20,9 @@
 <body>
 	<div class="navbar navbar-default navbar-small navbar-fixed-top">
 		<div class="navbar-brand pull-left">
-			<a href="#home">CUPUMANIK BATIK</a>
+			<a href="#home">
+				<img class="logo" src="../assets/logo-black.png" style="height: 40px" />
+			</a>
 		</div>
 		<button type="button" class="navbar-toggle pull-right" data-toggle="collapse" data-target=".navbar-collapse">
     		<span class="icon-bar"></span>
@@ -34,6 +36,64 @@
 				<li><a href="#shoppinglist">SHOPPING LIST <strong>(0)</strong></a></li>
 			</ul>
 		</div>
+	</div>
+	
+	<div id="featured-carousel" class="carousel slide" data-ride="carousel">
+		
+		<ol class="carousel-indicators">
+    		<li data-target="#featured-carousel" data-slide-to="0" class="active"></li>
+    		<li data-target="#featured-carousel" data-slide-to="1"></li>
+    		<li data-target="#featured-carousel" data-slide-to="2"></li>
+    		<li data-target="#featured-carousel" data-slide-to="3"></li>
+  		</ol>
+  		
+  		<div class="carousel-inner" role="listbox">
+  			<div class="item active">
+      			<img src="../assets/carousel1a.png" alt="Rok Batik Panjang">
+      			<div class="carousel-caption">
+        			<h3>Rok Batik Panjang</h3>
+        			<p>Rp 125.000,00</p>
+        			<button class="btn btn-info">Detail</button>
+      			</div>
+    		</div>
+    		
+    		<div class="item">
+      			<img src="../assets/carousel2a.png" alt="Celana Batik Skinny">
+      			<div class="carousel-caption">
+        			<h3>Celana Batik Skinny</h3>
+        			<p>Rp 180.000,00</p>
+        			<button class="btn btn-info">Detail</button>
+      			</div>
+    		</div>
+    		
+    		<div class="item">
+      			<img src="../assets/carousel3a.png" alt="Kaos Batik Sleeveless Pria">
+      			<div class="carousel-caption">
+        			<h3>Kaos Batik Sleeveless Pria</h3>
+        			<p>Rp 137.000,00</p>
+        			<button class="btn btn-info">Detail</button>
+      			</div>
+    		</div>
+    		
+    		<div class="item">
+      			<img src="../assets/carousel4a.png" alt="Kaos Batik Santai Wanita">
+      			<div class="carousel-caption">
+        			<h3>Celana Batik Skinny</h3>
+        			<p>Rp 202.000,00</p>
+        			<button class="btn btn-info">Detail</button>
+      			</div>
+    		</div>
+  		</div>
+  		
+  		<a class="left carousel-control" href="#featured-carousel" role="button" data-slide="prev">
+    		<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    		<span class="sr-only">Previous</span>
+  		</a>
+  		<a class="right carousel-control" href="#featured-carousel" role="button" data-slide="next">
+    		<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    		<span class="sr-only">Next</span>
+  		</a>
+  		
 	</div>
 </body>
 </html>
