--- a/template/home.html
+++ b/template/home.html
@@ -5,6 +5,8 @@
 <title>Cupumanik</title>
 <link href='https://fonts.googleapis.com/css?family=Raleway'
 	rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Alegreya' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="../css/style.css">
 <link rel="stylesheet" href="cupumanik-style.css">
 <link rel="stylesheet"
@@ -48,39 +50,47 @@
   		</ol>
   		
   		<div class="carousel-inner" role="listbox">
-  			<div class="item active">
-      			<img src="../assets/carousel1a.png" alt="Rok Batik Panjang">
+  			<div class="item active" style="background: url('../assets/carousel1a.png') no-repeat right top; background-size: cover">
+      			<!-- <img src="../assets/carousel1a.png" alt="Rok Batik Panjang">  -->
       			<div class="carousel-caption">
-        			<h3>Rok Batik Panjang</h3>
-        			<p>Rp 125.000,00</p>
-        			<button class="btn btn-info">Detail</button>
+      				<div class="carousel-text">
+      					<h2 class="product-title">Rok Batik Panjang</h2>
+        				<h4 class="product-price">Rp 125.000,00</h4>
+        				<button class="btn btn-info">Detail</button>
+      				</div>
       			</div>
     		</div>
     		
-    		<div class="item">
-      			<img src="../assets/carousel2a.png" alt="Celana Batik Skinny">
+    		<div class="item" style="background: url('../assets/carousel2a.png') no-repeat right top; background-size: cover">
+      			<!-- <img src="../assets/carousel2a.png" alt="Celana Batik Skinny">  -->
       			<div class="carousel-caption">
-        			<h3>Celana Batik Skinny</h3>
-        			<p>Rp 180.000,00</p>
-        			<button class="btn btn-info">Detail</button>
+        			<div class="carousel-text">
+        				<h2 class="product-title">Celana Batik Skinny</h2>
+        				<h4 class="product-price">Rp 180.000,00</h4>
+        				<button class="btn btn-info">Detail</button>
+        			</div>
       			</div>
     		</div>
     		
-    		<div class="item">
-      			<img src="../assets/carousel3a.png" alt="Kaos Batik Sleeveless Pria">
+    		<div class="item" style="background: url('../assets/carousel3a.png') no-repeat right top; background-size: cover">
+      			<!-- <img src="../assets/carousel3a.png" alt="Kaos Batik Sleeveless Pria">  -->
       			<div class="carousel-caption">
-        			<h3>Kaos Batik Sleeveless Pria</h3>
-        			<p>Rp 137.000,00</p>
-        			<button class="btn btn-info">Detail</button>
+        			<div class="carousel-text">
+        				<h2 class="product-title">Kaos Batik Sleeveless Pria</h2>
+        				<h4 class="product-price">Rp 137.000,00</h4>
+        				<button class="btn btn-info">Detail</button>
+        			</div>
       			</div>
     		</div>
     		
-    		<div class="item">
-      			<img src="../assets/carousel4a.png" alt="Kaos Batik Santai Wanita">
+    		<div class="item" style="background: url('../assets/carousel4a.png') no-repeat right top; background-size: cover">
+      			<!-- <img src="../assets/carousel4a.png" alt="Kaos Batik Santai Wanita"> -->
       			<div class="carousel-caption">
-        			<h3>Celana Batik Skinny</h3>
-        			<p>Rp 202.000,00</p>
-        			<button class="btn btn-info">Detail</button>
+        			<div class="carousel-text">
+        				<h2 class="product-title">Kaos Batik Santai Wanita</h2>
+        				<h4 class="product-price">Rp 202.000,00</h4>
+        				<button class="btn btn-info">Detail</button>
+        			</div>
       			</div>
     		</div>
   		</div>
