--- a/template/home.html
+++ b/template/home.html
@@ -14,10 +14,22 @@
 	integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
 	crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
+<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
 	integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
 	crossorigin="anonymous"></script>
+<script type="text/javascript">
+	$(document).ready(function() {
+		$(this).find('.product-info').hide();
+		$('.product-item').bind('mouseenter', function() {
+			$(this).find('.product-info').show('slide', {direction: 'up'});
+		});
+		$('.product-item').bind('mouseleave', function() {
+			$(this).find('.product-info').hide();
+		});
+	});
+</script>
 </head>
 <body>
 	<div class="navbar navbar-default navbar-small navbar-fixed-top">
@@ -104,6 +116,52 @@
     		<span class="sr-only">Next</span>
   		</a>
   		
+	</div>
+	
+	<div id="new-product-list" class="product-list-container">
+		<h3 class="list-title">Produk Terbaru</h3>
+		<div class="product-list row">
+			<div id="product-1" class="product-item col-md-3 col-sm-6 col-xs-12" >
+				<div id="product-1-inner" class="product-item-inner" style="background: url('../assets/produk-baru-1.jpg') no-repeat right top; background-size: cover">
+					<a href="#product-1" id="product-1-info" class="product-info">
+						<span>
+							<h3 class="product-title">Jas Batik</h3>
+							<h5 class="product-price">Rp 1.820.000,00</h5>
+						</span>
+					</a>
+				</div>
+			</div>	
+			<div id="product-2" class="product-item col-md-3 col-sm-6 col-xs-12">
+				<div id="product-2-inner" class="product-item-inner" style="background: url('../assets/produk-baru-2.jpg') no-repeat right top; background-size: cover">
+					<a href="#product-2" id="product-2-info" class="product-info">
+						<span>
+							<h3 class="product-title">Dasi Batik</h3>
+							<h5 class="product-price">Rp 103.000,00</h5>
+						</span>
+					</a>
+				</div>
+			</div>	
+			<div id="product-3" class="product-item col-md-3 col-sm-6 col-xs-12" >
+				<div id="product-3-inner" class="product-item-inner" style="background: url('../assets/produk-baru-3.jpg') no-repeat right top; background-size: cover">
+					<a href="#product-3" id="product-3-info" class="product-info">
+						<span>
+							<h3 class="product-title">Hijab Batik</h3>
+							<h5 class="product-price">Rp 152.000,00</h5>
+						</span>
+					</a>
+				</div>
+			</div>	
+			<div id="product-4" class="product-item col-md-3 col-sm-6 col-xs-12">
+				<div id="product-4-inner" class="product-item-inner" style="background: url('../assets/produk-baru-4.jpg') no-repeat right top; background-size: cover">
+					<a href="#product-4" id="product-4-info" class="product-info">
+						<span>
+							<h3 class="product-title">Dress Batik Short</h3>
+							<h5 class="product-price">Rp 282.000,00</h5>
+						</span>
+					</a>
+				</div>
+			</div>	
+		</div>
 	</div>
 </body>
 </html>
