--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+	overflow: hidden;
+}
+
 .list {
 	list-style: none;
 }
@@ -25,6 +29,7 @@
 .submain {
 	left: -50%;
 	position: relative;
+	min-width: 150%;
 }
 
 .list p {
@@ -34,10 +39,11 @@
 	font-size: 32px;
 }
 
-.link {
+.submain .link {
 	font-family: 'Raleway', serif;
 	font-size: 40px;
 	color: black;
+	margin-right: 25px;
 }
 
 .menu .link {
@@ -45,11 +51,17 @@
 	font-size: 16px;
 	border-bottom: 2px solid lightgrey;
 	padding-bottom: 2%;
+	margin-right: 2%;
+	color: black;
 }
 
 .menu .link:HOVER {
 	border-bottom: 2px solid #FF8D05;
 	text-decoration: none;
+}
+
+.menu .list {
+	min-width: 103%;
 }
 
 .menu p {
@@ -64,7 +76,7 @@
 }
 
 .logo {
-	max-height: 100px;
+	height: 100%;
 }
 
 .header {
@@ -72,13 +84,16 @@
 	left: 50%;
 	margin-top: 2%;
 	margin-bottom: 0%;
-	z-index: 1;
+	z-index: 999;
 	position: absolute;
+	max-width: 30%;
 }
 
 .subheader {
-	left: -50%;
+	left: -50%;;
 	position: relative;
+	min-height: 100%;
+	max-height: 100px;
 }
 
 .overlay {
@@ -134,6 +149,7 @@
 	font-size: 14px;
 	margin-bottom: 0px;
 	bottom: 0%;
+	right: 0%;
 	text-align: center;
 	position: fixed;
 	left: 50%;
@@ -161,9 +177,13 @@
 }
 
 .column {
-	max-width: 33.1%;
+	max-width: 33.5%;
 	display: inline-table;
 	right: 0;
+	margin-right: -0.5%;
+	left: 0;
+	border: 0;
+	padding: 0;
 	left: 0;
 }
 
@@ -173,12 +193,102 @@
 	border: 0;
 	right: 0;
 	left: 0;
+	border: 0;
+	border-width: 0px;
 	position: relative;
+	border-collapse: collapse;
+	outline: none;
+	left: 0;
 }
 
 .menu {
 	position: fixed;
 	color: black;
-	right: 0;
 	top: 2%;
+	right: 0;
+	z-index: 9999;
+}
+
+@media only screen and (max-width: 600px) {
+	.menu .link {
+		font-size: 11px;
+	}
+	.submain .link {
+		font-size: 32px;
+	}
+	.submain .list li {
+		display: block;
+		text-align: center;
+	}
+	.submain {
+		left: -35%;
+	}
+	.header {
+		left: 35%;
+		right: 0;
+		margin-top: 10%;
+		right: 0;
+	}
+	.subheader {
+		left: -35%;
+		max-height: 75px;
+	}
+	.content {
+		top: 27%;
+		left: 25%;
+	}
+	.foot p {
+		font-size: 10px;
+	}
+	.column {
+		max-width: 33.5%;
+		display: inline-table;
+		right: 0;
+		margin-right: -1%;
+		left: 0;
+		border: 0;
+		padding: 0;
+	}
+	.preview {
+		top: 60%;
+		min-height: 25%;
+		max-height: 50%;
+	}
+}
+
+@media only screen and (min-width: 600px) and (max-width:900px) {
+	.submain .list li {
+		display: block;
+		text-align: center;
+	}
+	.submain .link {
+		font-size: 30px;
+	}
+	.submain{
+		left: -65%;
+	}
+	.header {
+		left: 50%;
+		right: 0;
+		margin-top: 7.5%;
+		right: 0;
+	}
+	.subheader {
+		left: -50%;
+		max-height: 75px;
+	}
+	.column {
+		max-width: 33.5%;
+		display: inline-table;
+		right: 0;
+		margin-right: -1%;
+		left: 0;
+		border: 0;
+		padding: 0;
+	}
+	.preview {
+		top: 60%;
+		min-height: 25%;
+		max-height: 50%;
+	}
 }
