--- a/template/cupumanik-style.css
+++ b/template/cupumanik-style.css
@@ -9,14 +9,21 @@ body
 	min-height: 40px !important;
 }*/
 
+.navbar-default .container {
+	max-width: 1100px;
+	border: none;
+}
+
 .navbar-brand {
 	/*height: 40px !important;*/
 	padding: 5px 5% !important;
+	margin-left: 0 !important;
 }
 
 .navbar-collapse {	
     padding-left: 5% !important;
     padding-right: 5% !important;
+    overflow: hidden;
 }
 
 .nav-menu {
@@ -46,7 +53,18 @@ body
 }
 
 .nav-menu li:last-child {
-	border-left: 3px solid #bbb;
+	/* border-left: 2px solid #bbb;
+	border-right: 2px solid #bbb; */
+}
+
+.nav-menu li:last-child a {
+	background-color: #2D3C40;
+	border-bottom: 3px solid #2D3C40;
+	color: #fff !important;
+}
+
+.nav-menu li:last-child a:hover {
+	background-color: #447B82 !important;
 }
 
 .carousel .item {
@@ -79,7 +97,9 @@ body
 }
 
 .product-price {
-	font-family: 'Montserrat', Helvetica;
+	font-family: 'Alegreya Sans', Helvetica;
+	font-weight: 500;
+	font-size: 125%;
 	color: #f55;
 }
 
@@ -117,20 +137,32 @@ body
 	padding: 5px !important;
 }
 
-.product-info {
+.product-info, .product-info-small {
 	display: table;
 	width: 100%;
-	text-decoration: none !important;
+	text-decoration: none !important;	
 	height: 250px;
 	vertical-align: middle;
+	/*background-color: rgba(5, 5, 5, 0.9);	*/
 }
 
-.product-info span {
+.product-info-small {
+	padding-top: 180px;
+}
+
+.product-item span {
 	display: table-cell;
 	margin: auto;
 	background-color: rgba(5, 5, 5, 0.9);
 	vertical-align: middle;
-	line-height: 250px !important;
+}
+
+.product-info span {
+	line-height: 250px !important;	
+}
+
+.product-info-small span {
+	line-height: 60px !important;
 }
 
 .product-item h3, .product-item h5 {
@@ -139,6 +171,80 @@ body
 	text-align: center;
 }
 
+.product-item h3 {
+	font-size: 150%;
+}
+
 .product-item-inner {
 	height: 250px;
+}
+
+.footer {
+	font-family: 'Alegreya Sans', Helvetica;
+	color: #fff;
+	margin-top: 20px;
+}
+
+.footer h3 {
+	font-family: 'Raleway', Serif;
+}
+
+.footer ul {
+	padding-left: 0 !important;
+}
+
+.footer li {	
+	list-style-type: none;
+	display: block;
+	padding: 2px 0;
+	font-size: 110%;
+	vertical-align: middle;
+}
+
+.footer a {
+	color: white;
+}
+
+.footer a:hover {
+	color: #f8f8f8;
+}
+
+.footer .container {
+	background-color: #447B82;
+	margin: 0 !important;
+	width: 100%;
+	padding: 30px 0;
+}
+
+.footer-info {
+	
+}
+
+.inner-container {	
+	width: 100%;
+	max-width: 1100px;
+	padding: 0 5%;
+	margin: 0 auto;
+}
+
+.shop-footer {
+	width: 100%;
+}
+
+.shop-info p {
+	padding: 10px 0;
+	font-size: 115%;
+}
+
+.copyright-info {
+	background-color: #2D3C40;
+	padding: 15px 0;
+}
+
+.copyright-info p {
+	margin: 0 auto;
+	max-width: 1100px;
+	padding: 0 5%;
+	font-family: 'Raleway', Serif;
+	font-size: 90%;
 }
