--- a/template/home.html
+++ b/template/home.html
@@ -53,80 +53,39 @@
 			<ul class="nav navbar-nav nav-menu">
 				<li><a href="#category1">BATIK PRIA</a></li>
 				<li><a href="#category2">BATIK WANITA</a></li>
-				<li><a href="#shoppinglist">SHOPPING LIST <strong>(0)</strong></a></li>
+				<li><a href="#shoppinglist">DAFTAR BELANJA <strong>(0)</strong></a></li>
 			</ul>
 		</div>
 	</div>
 	</div>
 	
-	<div id="featured-carousel" class="carousel slide" data-ride="carousel">
-		
-		<ol class="carousel-indicators">
-    		<li data-target="#featured-carousel" data-slide-to="0" class="active"></li>
-    		<li data-target="#featured-carousel" data-slide-to="1"></li>
-    		<li data-target="#featured-carousel" data-slide-to="2"></li>
-    		<li data-target="#featured-carousel" data-slide-to="3"></li>
-  		</ol>
-  		
-  		<div class="carousel-inner" role="listbox">
-  			<div class="item active" style="background: url('../assets/carousel1a.png') no-repeat right top; background-size: cover">
-      			<!-- <img src="../assets/carousel1a.png" alt="Rok Batik Panjang">  -->
-      			<div class="carousel-caption">
-      				<div class="carousel-text">
-      					<h2 class="product-title">Rok Batik Panjang</h2>
-        				<h4 class="product-price">Rp 125.000,00</h4>
-        				<button class="btn btn-info">Detail</button>
-      				</div>
-      			</div>
-    		</div>
-    		
-    		<div class="item" style="background: url('../assets/carousel2a.png') no-repeat right top; background-size: cover">
-      			<!-- <img src="../assets/carousel2a.png" alt="Celana Batik Skinny">  -->
-      			<div class="carousel-caption">
-        			<div class="carousel-text">
-        				<h2 class="product-title">Celana Batik Skinny</h2>
-        				<h4 class="product-price">Rp 180.000,00</h4>
-        				<button class="btn btn-info">Detail</button>
-        			</div>
-      			</div>
-    		</div>
-    		
-    		<div class="item" style="background: url('../assets/carousel3a.png') no-repeat right top; background-size: cover">
-      			<!-- <img src="../assets/carousel3a.png" alt="Kaos Batik Sleeveless Pria">  -->
-      			<div class="carousel-caption">
-        			<div class="carousel-text">
-        				<h2 class="product-title">Kaos Batik Sleeveless Pria</h2>
-        				<h4 class="product-price">Rp 137.000,00</h4>
-        				<button class="btn btn-info">Detail</button>
-        			</div>
-      			</div>
-    		</div>
-    		
-    		<div class="item" style="background: url('../assets/carousel4a.png') no-repeat right top; background-size: cover">
-      			<!-- <img src="../assets/carousel4a.png" alt="Kaos Batik Santai Wanita"> -->
-      			<div class="carousel-caption">
-        			<div class="carousel-text">
-        				<h2 class="product-title">Kaos Batik Santai Wanita</h2>
-        				<h4 class="product-price">Rp 202.000,00</h4>
-        				<button class="btn btn-info">Detail</button>
-        			</div>
-      			</div>
-    		</div>
-  		</div>
-  		
-  		<a class="left carousel-control" href="#featured-carousel" role="button" data-slide="prev">
-    		<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    		<span class="sr-only">Previous</span>
-  		</a>
-  		<a class="right carousel-control" href="#featured-carousel" role="button" data-slide="next">
-    		<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    		<span class="sr-only">Next</span>
-  		</a>
-  		
+	<div id="home-banner">
+		<div id="home-content" class="row">
+			<div id="banner-content" class="col-sm-5 col-xs-12">
+				<h3>
+					BATIK EKSKLUSIF TERBAIK DI YOGYAKARTA
+				</h3>
+				<br />
+				<hr />
+				<p>
+					Lebih dari 100 koleksi batik dan kain batik terbaik ada di sini. Temukan favorit anda di sini
+				</p>	
+				<br /> 			
+				<div id="search-box">
+					<div class="input-group">
+						<input type="Search" id="search-input" placeholder="Cari busana atau kain batik" class="form-control" />
+       					<div class="input-group-btn">
+           					<button class="btn btn-info"><span class="glyphicon glyphicon-search"></span></button>
+       					</div>
+       				</div>
+				</div>
+			</div>
+			<div class="col-sm-7 col-xs-0">
+				&nbsp;
+			</div>
+		</div>
 	</div>
-	
-	
-	
+		
 	<div id="new-product-list" class="product-list-container">
 		<h3 class="list-title">Produk Terbaru</h3>
 		<div class="product-list row">
