--- a/template/cupumanik-style.css
+++ b/template/cupumanik-style.css
@@ -72,10 +72,29 @@ body
 
 /* banner */
 
-#home-banner {
-	background: url('../images/batik2.png') no-repeat center fixed; 
-	background-size: cover;
+.banner-bg {
 	width: 100%;
+	height: 0;
+	padding-top: 500px;
+}
+
+#banner-1 {
+	background: url('../images/batik1.png') no-repeat center fixed;
+	background-size: cover;
+}
+
+#banner-2 {
+	background: url('../images/batik2.png') no-repeat center fixed;
+	background-size: cover;
+}
+
+#banner-3 {
+	background: url('../images/batik3.png') no-repeat center fixed;
+	background-size: cover;
+}
+
+#home-banner {
+	background: #241811;
 }
 
 #home-content {
@@ -87,6 +106,7 @@ body
 #banner-content {
 	padding: 50px 20px;
 	background-color: rgba(5, 5, 5, 0.9);
+	margin-top: -500px;
 	min-height: 500px;
 	color: #fff;
 	font-family: 'Raleway', Serif;
@@ -99,6 +119,10 @@ body
 #banner-content p {
 	font-wight: 300;
 	font-size: 110%;
+}
+
+#banner-empty {
+	height: 0;
 }
 
 .input-group input {
@@ -204,7 +228,7 @@ body
 	margin-top: 20px;
 }
 
-.footer h3 {
+.footer h3, .footer h4 {
 	font-family: 'Raleway', Serif;
 }
 
@@ -252,6 +276,10 @@ body
 
 .shop-info p {
 	padding: 10px 0;
+	font-size: 115%;
+}
+
+.shop-nav li a, .shop-map p {
 	font-size: 115%;
 }
 
