--- a/batik.cupumanik.id/cupumanik-style.css
+++ b/batik.cupumanik.id/cupumanik-style.css
@@ -78,8 +78,8 @@ body
 	width: 100%;
 }
 
-#home-content {
-	padding: 0 5%;
+.main-body {
+	padding: 30px 5%;
 	max-width: 1100px;
 	margin: 0 auto;
 }
@@ -266,4 +266,10 @@ body
 	padding: 0 5%;
 	font-family: 'Raleway', Serif;
 	font-size: 90%;
+}
+
+.admin-body{
+	padding-top: 2%;
+	padding-left: 10%;
+	padding-right: 10%;
 }
