udah bisa tambah produk, upload gambar, tambah banyak field di database

--- a/batik.cupumanik.id/cupumanik-style.css
+++ b/batik.cupumanik.id/cupumanik-style.css
@@ -84,6 +84,10 @@ body
 	margin: 0 auto;
 }
 
+.main-body h1,h2,h3,p,a,table,button,strong,div,input,textarea{
+	font-family: 'Raleway', Serif !IMPORTANT;
+}
+
 #banner-content {
 	padding: 50px 20px;
 	background-color: rgba(5, 5, 5, 0.9);
